openshift-deployment.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: terriergpt-cache-netpol
  # TODO: Change "default" to your namespace
  namespace: default

spec:
  podSelector:
    matchLabels:
      app: terriergpt-cache
  
  policyTypes:
    - Ingress
    - Egress
  
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ingress
        - namespaceSelector:
            matchLabels:
              name: monitoring
      ports:
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 8001  # Metrics
  
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 443  # AWS Bedrock
        - protocol: TCP
          port: 53   # DNS
